softuni-creative-certificate-page/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
body {
    margin: 0;
    font-family: 'Lato', sans-serif;
    font-weight: 300;
    color: rgb(62, 61, 61);
    line-height: 1.3;
    overflow: hidden;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 500;
    color: inherit;
}
header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 5px 5%;
    box-shadow: -5px 14px 11px -13px rgba(0,0,0,0.75);
    margin-bottom: 3%;
    background-color: white;
}
.logo-wrapper {
    width: 120px;
    height: 70px;
}
.logo-wrapper > img {
    max-width: 100%;
    max-height: 100%;
    padding-top: 15%;
}
nav {
    width: 90%;
}
nav ul {
    display: flex;
    list-style: none;
    justify-content: space-between;
    align-items: center;
}
.nav-list-item {
    text-transform: uppercase;
}
.nav-list-item > a {
    text-decoration: none;
    color: inherit;
}
.nav-list-item.btn-primary {
    background-color: rgb(250,78,85);
    padding: 5px 14px;
    border-radius: 20px;
    box-shadow: 2px 5px 3px -2px rgba(0,0,0,0.60);

}
.nav-list-item.btn-primary > a {
    text-transform: capitalize;
    color: white;
}

.diplomas-and-certificates {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 5px 6%;
    position: relative;
}
.info-container {
    flex-basis: 65%;
}
.additional-info {
    font-size: 0.8em;
    font-style: italic;
}
.circle {
    width: 430px;
    height: 430px;
    background-color: rgb(94, 142, 185);
    border-radius: 3%;
    transform: rotate(40deg);
    position: absolute;
    top: -90%;
    right: -5%;
    z-index: -1;
}
.circle-image {
    position: absolute;
    top: -21%;
    right: 1%;
    z-index: -1;
}
.google-certification {
    display: flex;
    justify-content: space-between; 
    padding: 2% 5%;
    align-items: center;
    background-color: rgb(95, 117, 134);
}
.google-certification span {
    font-weight: 600;
}
.google-certification > p {
    flex-basis: 65%;
    color: white;
}
.google-certification-image {
    margin-right: 9%;
}
.cpe-certification {
    display: flex;
    align-items: center;
    margin: 9% 0;
}
.cpe-certification-content {
    justify-content: space-between; 
    padding: 5px 5%;
    align-items: center;
  
}
.cpe-certification-content  {
   flex-basis: 60%;
}
.google-certification-content > h2 {
    flex-basis: 100%;
    color: white;
}
.profession {
    padding: 5px 7%;
}
.profession-tab {
    position: relative;
}
.profession-tab::after {
    content: "";
    position: absolute;
    bottom: 0.30px;
    z-index: -1;
    height: 1px;
    width: 100%;
    background-color:  #d6d6d6;
}
.profession-tab ul {
    display: flex;
    padding: 0;
    /* justify-content: flex-start; */
    
}
.profession-tab li {
    min-width: 270px;
    list-style: none;
    margin-right: 2%;
    padding: 10px 5px;
}
.profession-tab .selected {
    border-bottom: 3px solid black;
}
.profession-tab li h3, .profession-tab li p {
    text-align: center;
    margin: 0;
}
.profession-tab li a h3 {
   color: rgb(62, 61, 61);
}
.profession-tab li a p {
   color: rgb(250,78,85);
   font-size: 0.9em;
   font-weight: 400;
}
.profession-tab a {
    text-decoration:  none;
}
.profession-tab li:hover {
   background-color: rgb(255, 227, 232);
}













@media all and (max-width: 1200px) {
    header {
        display: block;
    }
}

/* @media all and (max-width: 1100px) {
    nav ul {
        flex-direction: column;
    }
    .nav-list-item {
        margin: 10px;
    }
}
 */

